Router/kubernetes/router-api-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-reverse-proxy-nodeport
spec:
  type: NodePort
  selector:
    app: router-reverse-proxy
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
