Router/kubernetes/router-api-service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-reverse-proxy-public
spec:
  type: ClusterIP
  selector:
    app: router-reverse-proxy
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
